Assignement 1 complete